# rustyctranslate2

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
scripts/: install-linux-apt-arm64.sh  install-linux-apt-x86_64.sh  install-macos-brew-x86_64.sh
src/: lib.rs
