[package]
name = "ctranslate2"
version = "1.0.0"
description = "Rust wrapper for CTranslate2"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1.54"
build-target = "0.7.0"
